@@ -2,8 +2,8 @@ plugins {
   id 'java'
   id 'application'
   id 'org.javamodularity.moduleplugin' version '1.8.12'
-  id 'org.openjfx.javafxplugin' version '0.0.13'
-  id 'org.beryx.jlink' version '2.25.0'
+  id 'org.openjfx.javafxplugin' version '0.1.0'
+  id 'org.beryx.jlink' version '2.26.0'
 }
 
 group 'Clases'
@@ -31,7 +31,7 @@ application {
 
 javafx {
   version = '21'
-  modules = ['javafx.controls', 'javafx.fxml']
+  modules = ['javafx.controls', 'javafx.graphics','javafx.fxml','javafx.web']
 }
 
 dependencies {
@@ -42,11 +42,14 @@ dependencies {
   implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
   implementation 'com.squareup.okhttp3:okhttp:4.11.0'
   implementation 'com.google.code.gson:gson:2.10.1'
+  implementation 'org.openjfx:javafx-controls:21'
+  implementation 'org.openjfx:javafx-fxml:21'
 }
 
 test {
 useJUnitPlatform()}
 
+/*
 jlink {
   imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
   options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
@@ -57,4 +60,18 @@ jlink {
 
 jlinkZip {
   group = 'distribution'
+}
+*/
+sourceSets {
+  main {
+    resources {
+      srcDirs = ["src/main/resources"]
+    }
+  }
+}
+run {
+  jvmArgs = [
+          '--module-path', classpath.asPath,
+          '--add-modules', 'javafx.controls,javafx.fxml'
+  ]
 }
